--- a/src/style.css
+++ b/src/style.css
@@ -1,5 +1,5 @@
 :root {
-  --color-txt-nav: #5b00fb;
+  --color-txt-nav: crimson;
 }
 
 body {
@@ -8,28 +8,27 @@ body {
   box-sizing: border-box;
   font-family: Arial, Helvetica, sans-serif;
 }
-
 header {
   background-color: white;
   z-index: 5;
-  position: fixed;
+  position: relative;
   top: 0;
   width: 100%;
-  height: 80px;
-
+  height: 85px;
   display: flex;
 }
 
 /* containerBrand */
 header .containerBrand {
-  width: 20%;
+  width: 10%;
   min-width: 200px;
   height: 100%;
   display: flex;
   justify-content: center;
 }
 header .containerBrand img {
-  transform: scale(1.8);
+  transform: scale(0.3);
+  margin-top: -250px;
 }
 
 /* containerList */
@@ -51,6 +50,7 @@ header .containerMenuList ul {
 
 header .containerMenuList ul li {
   text-decoration: none;
+  font-size: 18px;
 
   margin: 0 0 0 50px;
   color: var(--color-txt-nav);
